Fixing rendering issue on mobile - added box-shadow with -.8px in Y direction

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -202,12 +202,13 @@ body {
       .home__text-box {
         margin: 2rem auto; } }
   .home-headline {
-    font-size: 2.5rem; }
+    font-size: 2.5rem;
+    color: orangered; }
     .home-headline--gradient {
       background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      box-shadow: 0 -1px 0 orangered; }
+      box-shadow: 0 -0.8px 0 #fff; }
     @media (min-width: 56.25em) {
       .home-headline {
         font-size: 3.6rem;
