--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,13 +26,14 @@
     
     &-headline {
         font-size: 2.5rem;
-        //color: orangered;
+        color: orangered;
         
         &--gradient {
             @include gradient-text;
             //outline: 3px solid orangered;
             //overflow-y: hidden;
-            box-shadow: 0 -1px 0 orangered;
+            //box-shadow: 0 -1px 0 orangered;
+            box-shadow: 0 -.8px 0 $color-white;
         }
         
         @include for-tablet-landscape-up {
